Add moon svg code
