# source/api/api.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
   title: Pegasus API
-  version: "1.0"
+  version: "1.3"
   description: API to fetch personal information
   contact:
     name: Sai Kiran
@@ -22,6 +22,8 @@ tags:
     description: Images
   - name: playstation
     description: Playstation Endpoints
+  - name: astronomy
+    description: Astronomy Endpoints
 
 paths:
   /steam/{id}/summary:
@@ -766,6 +768,122 @@ paths:
               schema:
                 type: string
                 example: Unable to Handle Request
+
+  /moon-phase/svg:
+    summary: Moon Image Summary
+    get:
+      operationId: get-moon-phase
+      tags: [astronomy, image]
+      description: Get Moon Phase SVG
+      parameters:
+        - name: lat
+          in: query
+          description: Latitude
+          required: false
+          schema:
+            type: string
+            pattern: ^[-+]?([1-8]?\d(\.\d+)?|90(\.0+)?)$
+            default: '17.387140'
+        - name: long
+          in: query
+          description: Longitude
+          required: false
+          schema:
+            type: string
+            pattern: ^\s*[-+]?(180(\.0+)?|((1[0-7]\d)|([1-9]?\d))(\.\d+)?)$
+            default: '78.491684'
+        - name: date
+          in: query
+          description: date
+          required: false
+          schema:
+            type: string
+            pattern: /^[0-9]{4}-[0-9]{2}-[0-9]{2}$/
+      responses:
+        '200':
+          description: Successfully retrieved the moon phase
+          headers:
+            RateLimit-Limit:
+              description: Total number of tries possible
+              required: true
+              schema:
+                type: number
+                minimum: 1
+                maximum: 1000
+            RateLimit-Remaining:
+              description: Remaining number of tries possible
+              required: true
+              schema:
+                type: number
+                minimum: 0
+                maximum: 1000
+            RateLimit-Reset:
+              $ref: '#/components/headers/RateLimit-Reset'
+          content:
+            image/jpeg:
+              schema:
+                type: string
+                format: binary
+
+        '400':
+          description: Bad Request
+          headers:
+            RateLimit-Limit:
+              description: Total number of tries possible
+              required: true
+              schema:
+                type: number
+                minimum: 1
+                maximum: 1000
+            RateLimit-Remaining:
+              description: Remaining number of tries possible
+              required: true
+              schema:
+                type: number
+                minimum: 0
+                maximum: 1000
+            RateLimit-Reset:
+              $ref: '#/components/headers/RateLimit-Reset'
+          content:
+            application/json:
+              schema:
+                type: string
+                example: bad request
+
+        '429':
+          description: Rate Limiting
+          headers:
+            RateLimit-Limit:
+              description: Total number of tries possible
+              required: true
+              schema:
+                type: number
+                minimum: 1
+                maximum: 1000
+            RateLimit-Remaining:
+              description: Remaining number of tries possible
+              required: true
+              schema:
+                type: number
+                minimum: 0
+                maximum: 1000
+            RateLimit-Reset:
+              $ref: '#/components/headers/RateLimit-Reset'
+            Retry-After:
+              $ref: '#/components/headers/RateLimit-Reset'
+          content:
+            application/json:
+              schema:
+                type: string
+                example: 'You have exceeded number of requests, Try again later!'
+
+        '500':
+          description: server unavailable
+          content:
+            application/json:
+              schema:
+                type: string
+                example: Unable to Handle Request            
 
 components:
   headers:
